connection string added

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NzWalksConnectionSTring": "Server=localhost;Database=MZWalksDb;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
